--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@
 
     <body>
         <div id="root"></div>
-        <script type="text/babel" src="./src/main.jsx"></script>
+        <script type="module" src="./src/main.jsx"></script>
     </body>
 </html>
