--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link
             rel="icon"
             type="image/png"
-            href="/src/assets/favicon-32x32.png" />
+            href="./public/src/assets/Images/favicon-32x32.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -85,6 +85,6 @@
 
     <body>
         <div id="root"></div>
-        <script type="module" src="./src/main.jsx"></script>
+        <script type="module" src="/public/src/main.jsx"></script>
     </body>
 </html>
